Fixed: overflow on smaller screen when menu is open

--- a/client/app/views/styles/_responsive.styl
+++ b/client/app/views/styles/_responsive.styl
@@ -9,7 +9,7 @@
 
     body
         text-rendering optimizeSpeed
-        overflow none
+        overflow hidden
 
     #menu-toggler
         display inline-block
